src/app/main/component/user/components/profile/users-achievements/achievements-modal/achievements-modal.component.scss
@import 'src/typography/_resp.scss';
@import 'src/typography/_colors.scss';
@import 'src/typography/_fonts.scss';

.main {
  width: 800px;
  min-height: 500px;
  color: var(--primary-dark-grey);
}

.wrapper {
  padding: 32px;
}

.user {
  &__wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  &__data {
    padding-left: 13px;
    flex-grow: 1;
  }

  &__name {
    color: var(--primary-dark-grey);
    font-style: var(--secondary-font);
    font-weight: 500;
    font-size: 18px;
    padding-left: 5px;
  }

  &__achievements-amount {
    color: var(--secondary-dark-green);
  }
}

.btn {
  color: var(--secondary-grey);
  background-color: #fff;
  border: none;

  &:focus {
    outline: none;
  }

  &:active {
    outline: none;
    box-shadow: none;
  }

  &:hover {
    background-color: transparent;
  }
}

.close-modal-window {
  margin-top: -30px;
}

.achievements {
  &__wrapper {
    padding-top: 20px;
  }

  &__title {
    font-family: var(--secondary-font);
    font-size: 22px;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  &__list {
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    padding: 0;
    margin: 0;
  }
}

@include responsivePCFirst(lg) {
  .wrapper {
    width: 480px;
    padding-right: 0;
  }
}

@include responsivePCFirst(lg) {
  .wrapper {
    div {
      max-width: 320px;
    }
  }
}

@media screen and (max-width: 350px) {
  .wrapper {
    div {
      max-width: 280px;
    }
  }
}

